# frap

./: .pylintrc  Dockerfile  Jenkinsfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirments.txt  run.py  setup.cfg
Docs/: getting_started.md  index.md  introduction.md  usage.md
app/: app.py  components.py  orm.py  responses.py  routes.py  templates.py
components/: forms.py  navbar.py  sidebar.py  sidebarComponents.py  slider.py  star.py
middleware/: authenticationMiddleware.py  middleware.py
server/: custom_handler.py  gunicornserver.py  hyperconserver.py  threaded_server.py  wsgirefserver.py
templates/: LoginPage.html  Messageboard.html  base.html  index.html
tests/: test_frap.py
utils/: rule.py
