[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, W503"
exclude = ".git,__pycache__,old,build,dist,env"

[tool.pylint.MASTER]
init-hook = "import os; import sys; sys.path.insert(0, os.path.abspath(os.getcwd()))"
max-line-length = 129
ignore-patterns = ["^frap/tests/test_frap\\.py$"]
